raw/regex-0.1.80@010-baseline--2017-01-11-19-24-44--2.log
commit 1ca100d0428985f916eea153886762bed3909771
Merge: b27c709 d723e02
Author: bors <bors@rust-lang.org>
Date:   Thu Jan 12 01:01:06 2017 +0000

    Auto merge of #38605 - estebank:fix-38371, r=nikomatsakis
    
    Suggest solutions for `fn foo(&foo: Foo)`
    
    For a given file:
    
    ```rust
    struct Foo {}
    
    fn foo(&foo: Foo) {}
    ```
    
    suggest:
    
    ```
    error[E0308]: mismatched types
     --> file.rs:3:8
      |
    3 | fn foo(&foo: Foo) {}
      |        ^^^^ expected struct `Foo`, found reference
      |
      = note: expected type `Foo`
      = note:    found type `&_`
      = help: did you mean `foo: &Foo`?
    ```
    
    Fix #38371.
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./regex-0.1.80@010-baseline
cargo rustc  -- -Ztime-passes -Zinput-stats
makefile:9: recipe for target 'all@010-baseline' failed
done
